--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,10 @@ import { Separator } from "@/components/ui/separator";
 import { Image } from "astro:assets";
 ---
 
-<Layout title="...I have a lot to say">
+<Layout title="😡 I have lots to say">
 	<main>
 		<div class="container max-w-2xl mx-auto">
-			<h1 class="text-4xl font-bold mt-20 mb-6">...I have a lot to say 😡</h1>
+			<h1 class="text-4xl font-bold mt-20 mb-6">...I have lots to say 😡</h1>
 			<div class="flex items-start gap-4">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
