fix: state bug and design adjustments

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import { Image } from "astro:assets";
 			<FormAdLib client:load />
 			<Separator className="my-10" />
 			<footer class="mt-6 mb-16">
-				<ul class="list-disc pl-6">
+				<ul class="list-disc pl-6 space-y-2">
 					<li>
 						A stupid fucking thing made by
 						<a href="https://natedunn" class="underline">
@@ -49,13 +49,6 @@ import { Image } from "astro:assets";
 								src="https://natedunn.net/me-v2.webp"
 							/>@natedunn</a
 						>
-					</li>
-					<li>
-						Based off original <a
-							class="underline"
-							href="https://www.reddit.com/r/github/comments/1at9br4/i_am_new_to_github_and_i_have_lots_to_say/"
-							target="_blank">Reddit thread</a
-						>.
 					</li>
 					<li>
 						Inspired by <a
@@ -71,6 +64,14 @@ import { Image } from "astro:assets";
 							/>@TheCoppinger</a
 						>
 					</li>
+					<li>
+						Based off original <a
+							class="underline"
+							href="https://www.reddit.com/r/github/comments/1at9br4/i_am_new_to_github_and_i_have_lots_to_say/"
+							target="_blank">Reddit thread</a
+						>.
+					</li>
+
 					<li>Please be kind. We're all just trying our best. ❤️</li>
 				</ul>
 			</footer>
