--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { Separator } from "@/components/ui/separator";
 import { Image } from "astro:assets";
 ---
 
-<Layout title="😡 I have lots to say">
+<Layout title="...I have lots to say">
 	<main>
 		<div class="container max-w-3xl mx-auto">
 			<h1 class="text-4xl font-bold mt-20 mb-6">...I have lots to say 😡</h1>
