fix: alt image text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import { Image } from "astro:assets";
 								class="rounded-full inline mx-2 !no-underline"
 								height={25}
 								width={25}
-								alt="Nate's profile photo"
+								alt="Nate Dunn"
 								src="https://natedunn.net/me-v2.webp"
 							/>@natedunn</a
 						>
@@ -59,20 +59,23 @@ import { Image } from "astro:assets";
 								class="rounded-full inline mx-2 !no-underline"
 								height={25}
 								width={25}
-								alt="Nate's profile photo"
+								alt="The Coppinger"
 								src="https://pbs.twimg.com/profile_images/1768033209110114304/Hh5kEn6d_400x400.jpg"
 							/>@TheCoppinger</a
 						>
 					</li>
 					<li>
-						Based off original <a
+						q Based off original <a
 							class="underline"
 							href="https://www.reddit.com/r/github/comments/1at9br4/i_am_new_to_github_and_i_have_lots_to_say/"
 							target="_blank">Reddit thread</a
 						>.
 					</li>
 
-					<li>Please be kind. We're all just trying our best. ❤️</li>
+					<li>
+						This site is intentionally satirical. Please be kind. We're all just
+						trying our best. ❤️
+					</li>
 				</ul>
 			</footer>
 		</div>
