--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ import { Image } from "astro:assets";
 						>
 					</li>
 					<li>
-						q Based off original <a
+						Based off original <a
 							class="underline"
 							href="https://www.reddit.com/r/github/comments/1at9br4/i_am_new_to_github_and_i_have_lots_to_say/"
 							target="_blank">Reddit thread</a
